# photo_culling

./: .gitignore  Makefile  README.md  docker-compose.yaml  pyproject.toml
config/: pipeline.yaml
database/: photo_culling.db
src/photo_culling/: analysis_pipeline.py  batch.py  config.py  config_loader.py  db.py  metadata.py  pairing.py  raw_render.py  report_db.py  run_pipeline.py
src/photo_culling/database/: photo_culling.db
tests/: conftest.py  test_analysis_decision.py  test_analysis_pipeline.py  test_batch.py  test_batch_sqlite.py  test_batch_sqlite_exception.py  test_config_loader.py  test_db_edge_cases.py  test_db_reads.py  test_metadata.py  test_pairing.py  test_raw_render.py  test_report_db.py  test_run_pipeline.py
worker/: Dockerfile  app.py
worker/tests/: conftest.py  requirements-test.txt  test_app.py
